<?php die(); ?>
Akeeba LoginGuard 3.3.3
================================================================================
~ Added passwordless to the Silent login authentication response types
~ Internals change: Zend Framework is now Laminas, updated dependencies accordingly

Akeeba LoginGuard 3.3.2
================================================================================
# [HIGH] Wrong path to cacert.pem broke the Pushbullet method

Akeeba LoginGuard 3.3.1
================================================================================
+ LoginGuard will fix and update its database if necessary when you visit its backend page as a Super User
+ Joomla 4 compatible
~ Minimum requirement: Joomla 3.9
~ Internal changes to use proper-cased views everywhere instead of legacy task=viewname.taskname when building public URLs
~ Do not go through browser fingerprinting if the Remember Me feature is disabled at the component level.
~ HTML5 number field for 6 digit codes (Email, PushBullet, SMS, Time-based One Time Password)
~ Now using WebAuthn library version 2, required for operating inside Joomla 4
# [HIGH] Unable to change 2SV method on Chrome when caching is enabled either at the Joomla or web server level.
# [MEDIUM] Joomla 4 throws an exception when mail is disabled and you try to send an email
# [LOW] Unhandled exception page was incompatible with Joomla 4

Akeeba LoginGuard 3.3.0
================================================================================
+ Browser fingerprinting to reduce 2SV prompts
# [LOW] Dark Mode “Auto” setting ended up being the same as “Always”
# [LOW] U2F and WebAuthn do not show a verification button if your browser / hardware cancels the verification [gh-80]
# [LOW] Missing file css/dark.min.css from the media folder
# [HIGH] Cannot access backend if you have TFA enabled and you're not a Super User (or have the core.manage privilege for LoginGuard)

Akeeba LoginGuard 3.2.1