@@ -5,6 +5,17 @@
       <sourceFolder url="file://$MODULE_DIR$/component/backend" isTestSource="false" packagePrefix="Akeeba\LoginGuard\Admin" />
       <sourceFolder url="file://$MODULE_DIR$/component/frontend" isTestSource="false" packagePrefix="Akeeba\LoginGuard\Site" />
       <sourceFolder url="file://$MODULE_DIR$/plugins/loginguard/webauthn/Webauthn" isTestSource="false" packagePrefix="Akeeba\LoginGuard\Webauthn" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/brick/math" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/fgrosse/phpasn1" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/laminas/laminas-diactoros" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/laminas/laminas-zendframework-bridge" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/nyholm/psr7" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/paragonie/random_compat" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/php-http/message-factory" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/psr/http-client" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/ramsey/uuid" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/symfony/polyfill-ctype" />
+      <excludeFolder url="file://$MODULE_DIR$/component/backend/vendor/web-auth/metadata-service" />
     </content>
     <orderEntry type="inheritedJdk" />
     <orderEntry type="sourceFolder" forTests="false" />
