@@ -5,6 +5,27 @@
       <path value="$PROJECT_DIR$/../../master/joomla-cms" />
       <path value="$PROJECT_DIR$/../../dionysopoulos/joomlatypehints/generated_hints" />
       <path value="$PROJECT_DIR$/../fof3/fof" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/psr/http-factory" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/spomky-labs/cbor-php" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/psr/http-message" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/zendframework/zend-diactoros" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/composer" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/beberlei/assert" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/thecodingmachine/safe" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/web-auth/cose-lib" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/web-auth/webauthn-lib" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/spomky-labs/base64url" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/psr/http-client" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/php-http/message-factory" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/fgrosse/phpasn1" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/paragonie/random_compat" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/nyholm/psr7" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/brick/math" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/ramsey/uuid" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/symfony/polyfill-ctype" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/laminas/laminas-zendframework-bridge" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/laminas/laminas-diactoros" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/web-auth/metadata-service" />
     </include_path>
   </component>
   <component name="PhpProjectSharedConfiguration" php_language_level="7.1" />
