@@ -3,6 +3,7 @@ Akeeba LoginGuard 3.3.3
 ================================================================================
 ~ Added passwordless to the Silent login authentication response types
 ~ Internals change: Zend Framework is now Laminas, updated dependencies accordingly
+# Multiple email / SMS with the second factor code are sent on some sites when these methods are default for a user.
 
 Akeeba LoginGuard 3.3.2
 ================================================================================
